--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,21 +27,21 @@
 
 
     <div class="card mx-auto profile">
-        <h5 class="card-header" style="background-color:rgb(153, 185, 183);">X's Profile</h5>
+        <h5 class="card-header" style="background-color:rgb(153, 185, 183);">{{username}}'s Profile</h5>
         <div class="card-body">
-            <p><b>Username</b>: </p>
-            <p><b>Email</b>: </p>
+            <p><b>Username</b>:{{username}} </p>
+            <p><b>Email</b>:{{email}} </p>
         </div>
     </div>
     <div class="card mx-auto profile">
         <h5 class="card-header" style="background-color:rgb(153, 185, 183);">Results Feedback</h5>
         <div class="card-body">
-            <p><b>Hydrogen Quiz Results</b>: </p>
-            <p><b>Carbon Quiz Results</b>: </p>
-            <p><b>Oxygen Quiz Results</b>: </p>
-            <p><b>Helium Quiz Results</b>: </p>
-            <p><b>Iron Quiz Results</b>: </p>
-            <p><b>Nitrogen Quiz Results</b>: </p>
+            <p><b>Hydrogen Quiz Results</b>:{{hydrogen}}%</p>
+            <p><b>Carbon Quiz Results</b>:{{carbon}}% </p>
+            <p><b>Oxygen Quiz Results</b>:{{oxygen}}% </p>
+            <p><b>Helium Quiz Results</b>:{{helium}}% </p>
+            <p><b>Iron Quiz Results</b>:{{iron}}% </p>
+            <p><b>Nitrogen Quiz Results</b>:{{nitrogen}}% </p>
             <br>
             <p style="font-size: 20px;"><b>Congratulations on trying out the quizzes! Try to achieve 100 in all!</b> </p>
         </div>
