--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,10 @@
 <div class="login-page">
     <div class="form">
         <form method='POST'>
-            {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{ wtf.form_field(form.password) }} {{ wtf.form_field(form.email) }}
+            {{ form.hidden_tag() }} 
+            {{ wtf.form_field(form.username) }} 
+            {{ wtf.form_field(form.password) }} 
+            {{ wtf.form_field(form.email) }}
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
         </form>
