--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -1,20 +1,19 @@
 * {
     box-sizing: border-box;
-
 }
 
 body {
     margin: 0;
     padding: 0;
-    background-color: rgba(202, 208, 214, 0.76);
+    background-color: rgba(191, 200, 230, 0.76);
 }
 
-#title-placeholder{
+#title-placeholder {
     text-align: center;
     padding: 25px;
 }
 
-#intro-placeholder{
+#intro-placeholder {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -22,52 +21,173 @@ body {
     padding: 20px;
 }
 
-ul{
+ul {
     padding: 20px;
 }
-lo{
+
+lo {
     border: black 2px;
     padding: 10px;
     background-color: lightgray;
     font-size: 20px;
 }
 
-table{
+table {
     text-align: center;
     font-size: 20px;
     margin-left: auto;
     margin-right: auto;
 }
-tr, td{
-    padding:5px;
+
+tr,
+td {
+    padding: 5px;
 }
-#H,#C,#N,#O,#F,#P,#S,#Cl,#Se,#Br,#I{
+
+#H,
+#C,
+#N,
+#O,
+#F,
+#P,
+#S,
+#Cl,
+#Se,
+#Br,
+#I {
     background-color: lightgreen;
 }
-#Li,#Na,#K,#Rb,#Cs,#Fr{
+
+#Li,
+#Na,
+#K,
+#Rb,
+#Cs,
+#Fr {
     background-color: red;
 }
-#Be,#Mg,#Ca,#Sr,#Ba,#Ra{
+
+#Be,
+#Mg,
+#Ca,
+#Sr,
+#Ba,
+#Ra {
     background-color: orange;
 }
-#B,#Si,#Ge,#As,#Sb,#Te,#At{
+
+#B,
+#Si,
+#Ge,
+#As,
+#Sb,
+#Te,
+#At {
     background-color: yellow;
 }
-#He,#Ne,#Ar,#Kr,#Xe,#Rn{
+
+#He,
+#Ne,
+#Ar,
+#Kr,
+#Xe,
+#Rn {
     background-color: pink;
 }
-#Sc,#Ti,#V,#Cr,#Mn,#Fe,#Co,#Ni,#Cu,#Y,#Zr,#Nb,#Mo,#Tc,#Ru,#Rh,#Pd,#Ag,#Hf,#Ta,#W,#Re,#Os,#Ir,#Pt,#Au,#Rf,#Db,#Sg,#Bh,#Hs{
+
+#Sc,
+#Ti,
+#V,
+#Cr,
+#Mn,
+#Fe,
+#Co,
+#Ni,
+#Cu,
+#Y,
+#Zr,
+#Nb,
+#Mo,
+#Tc,
+#Ru,
+#Rh,
+#Pd,
+#Ag,
+#Hf,
+#Ta,
+#W,
+#Re,
+#Os,
+#Ir,
+#Pt,
+#Au,
+#Rf,
+#Db,
+#Sg,
+#Bh,
+#Hs {
     background-color: lightblue;
 }
-#Mt,#Ds,#Rg,#Nh,#Fl,#Mc,#Lv,#Ts,#Og{
+
+#Mt,
+#Ds,
+#Rg,
+#Nh,
+#Fl,
+#Mc,
+#Lv,
+#Ts,
+#Og {
     background-color: grey;
 }
-#Al,#Zn,#Ga,#Cd,#In,#Sn,#Hg,#Tl,#Pb,#Bi,#Po,#Cn{
+
+#Al,
+#Zn,
+#Ga,
+#Cd,
+#In,
+#Sn,
+#Hg,
+#Tl,
+#Pb,
+#Bi,
+#Po,
+#Cn {
     background-color: purple;
 }
-#La,#Ce,#Pr,#Nd,#Pm,#Sm,#Eu,#Gd,#Tb,#Dy,#Ho,#Er,#Tm,#Yb,#Lu{
+
+#La,
+#Ce,
+#Pr,
+#Nd,
+#Pm,
+#Sm,
+#Eu,
+#Gd,
+#Tb,
+#Dy,
+#Ho,
+#Er,
+#Tm,
+#Yb,
+#Lu {
     background-color: blue;
 }
-#Ac,#Th,#Pa,#U,#Np,#Pu,#Am,#Cm,#Bk,#Cf,#Es,#Fm,#Md,#No,#Lr{
+
+#Ac,
+#Th,
+#Pa,
+#U,
+#Np,
+#Pu,
+#Am,
+#Cm,
+#Bk,
+#Cf,
+#Es,
+#Fm,
+#Md,
+#No,
+#Lr {
     background-color: greenyellow;
 }
